# MSPCore

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
src/MSPCore/: __init__.py  downloader.py  events.py  url_handler.py
src/MSPCore/player/: __init__.py  track.py
src/MSPCore/services/: __init__.py  vk.py  yam.py  yt.py
src/mspcore/: __init__.py  config.py  downloader.py  url_handler.py  utils.py
src/mspcore/player/: sound_device.py
src/mspcore/services/: yt.py
typestubs/: mpv.pyi
typestubs/vk_api/: __init__.py
typestubs/yandex_music/: exceptions.pyi
typestubs/yandex_music/album/: album.pyi
